<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <com.example.freightmanagement.Utils.RoundImageView
        android:id="@+id/mine_icon_img"
        android:layout_width="@dimen/x140"
        android:layout_height="@dimen/x140"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/x180"
        android:background="@mipmap/log"
        android:scaleType="centerCrop" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/x200"
        android:gravity="center_vertical"
        android:orientation="horizontal">


        <EditText
            android:id="@+id/edtTxt_yzm_img"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x64"
            android:layout_marginLeft="@dimen/x80"
            android:background="@null"
            android:hint="@string/login_username_hint"
            android:imeOptions="actionGo"
            android:maxLength="11"
            android:inputType="number"
            android:paddingLeft="@dimen/x30"
            android:singleLine="true"
            android:textAllCaps="true"
            android:textColor="@color/color_333"
            android:textColorHint="#CCCCCC"
            android:textCursorDrawable="@drawable/et_cursor"
            android:textSize="@dimen/x32" />
    </RelativeLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/x1"
        android:layout_marginLeft="@dimen/x90"
        android:layout_marginTop="@dimen/x10"
        android:layout_marginRight="@dimen/x90"
        android:background="@color/gray_background" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/x60"
        android:gravity="center_vertical"
        android:orientation="horizontal">


        <EditText
            android:id="@+id/edtTxt_password_phone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x64"
            android:layout_marginLeft="@dimen/x80"
            android:background="@null"
            android:hint="@string/login_password_hint"
            android:imeOptions="actionDone"
            android:paddingLeft="@dimen/x30"
            android:singleLine="true"
            android:inputType="textPassword"
            android:textColor="@color/color_333"
            android:textColorHint="#CCCCCC"
            android:textCursorDrawable="@drawable/et_cursor"
            android:textSize="@dimen/x30" />

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/x1"
        android:layout_marginLeft="@dimen/x90"
        android:layout_marginTop="@dimen/x10"
        android:layout_marginRight="@dimen/x90"
        android:background="@color/gray_background" />
    <RelativeLayout
        android:layout_marginTop="@dimen/x40"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_register"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/x60"
            android:text="@string/user_register"
            android:layout_marginLeft="@dimen/x100"
            android:textColor="@color/color_666"
            android:textSize="@dimen/x24" />
        <TextView
            android:id="@+id/tv_forget"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/x60"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/x100"
            android:gravity="right"
            android:text="@string/user_forget"
            android:layout_marginLeft="@dimen/x90"
            android:textColor="@color/color_666"
            android:textSize="@dimen/x24" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_srue"
        style="@style/bottom_button_style"
        android:layout_below="@+id/inputEdit_phone"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/x90"
        android:layout_marginTop="@dimen/x150"
        android:layout_marginRight="@dimen/x90"
        android:text="登录" />
    <RadioGroup
        android:id="@+id/login_rg"
        android:layout_marginTop="@dimen/x40"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/login_rb1"
            android:text="驾驶员"
            android:checked="true"
            android:buttonTint="@color/blue_079EEB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <RadioButton
            android:id="@+id/login_rb2"
            android:text="车主"
            android:buttonTint="@color/blue_079EEB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <RadioButton
            android:id="@+id/login_rb3"
            android:text="企业"
            android:buttonTint="@color/blue_079EEB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RadioGroup>
</LinearLayout>