<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".Activity.ChangePasswordActivity">

    <AutoCompleteTextView
    android:id="@+id/edtTxt_login_password1"
    android:layout_width="match_parent"
    android:layout_height="@dimen/x64"
    android:layout_centerVertical="true"
    android:layout_marginLeft="@dimen/x50"
    android:layout_marginRight="@dimen/x80"
    android:layout_marginTop="@dimen/x200"
    android:layout_toRightOf="@+id/img_ac"
    android:background="@null"
    android:completionThreshold="1"
    android:hint="@string/login_password_hint2"
    android:imeOptions="actionNext"
    android:inputType="textPassword"
    android:longClickable="false"
    android:maxLength="11"
    android:singleLine="true"
        android:visibility="gone"
    android:textColor="@color/color_333"
    android:textColorHint="@color/color_999"
    android:textCursorDrawable="@drawable/et_cursor"
    android:textSize="@dimen/x40" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/x2"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="@dimen/x80"
        android:layout_marginLeft="@dimen/x50"
        android:background="@color/gray_background" />

    <AutoCompleteTextView
        android:id="@+id/edtTxt_login_password2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x64"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/x50"
        android:layout_marginRight="@dimen/x80"
        android:layout_marginTop="@dimen/x100"
        android:layout_toRightOf="@+id/img_ac"
        android:background="@null"
        android:completionThreshold="1"
        android:hint="@string/login_password_hint3"
        android:imeOptions="actionNext"
        android:inputType="textPassword"
        android:longClickable="false"
        android:maxLength="11"
        android:singleLine="true"
        android:textColor="@color/color_333"
        android:textColorHint="@color/color_999"
        android:textCursorDrawable="@drawable/et_cursor"
        android:textSize="@dimen/x40" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/x2"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="@dimen/x80"
        android:layout_marginLeft="@dimen/x50"
        android:background="@color/gray_background" />

    <AutoCompleteTextView
        android:id="@+id/edtTxt_login_password3"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x64"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/x50"
        android:layout_marginRight="@dimen/x80"
        android:layout_marginTop="@dimen/x100"
        android:layout_toRightOf="@+id/img_ac"
        android:background="@null"
        android:completionThreshold="1"
        android:hint="@string/login_password_hint4"
        android:imeOptions="actionNext"
        android:inputType="textPassword"
        android:longClickable="false"
        android:maxLength="11"
        android:singleLine="true"
        android:textColor="@color/color_333"
        android:textColorHint="@color/color_999"
        android:textCursorDrawable="@drawable/et_cursor"
        android:textSize="@dimen/x40" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/x2"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="@dimen/x80"
        android:layout_marginLeft="@dimen/x50"
        android:background="@color/gray_background" />

    <TextView
        android:id="@+id/tv_srue"
        style="@style/bottom_button_style"
        android:layout_below="@+id/rel_mima"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/x90"
        android:layout_marginRight="@dimen/x90"
        android:layout_marginTop="@dimen/x150"
        android:text="确定" />
</LinearLayout>